--- a/app/src/main/res/layout/item_news.xml
+++ b/app/src/main/res/layout/item_news.xml
@@ -33,17 +33,10 @@
                 android:layout_height="wrap_content"
                 android:textAppearance="@style/TextAppearance.AppCompat.Title"
                 android:textColor="@color/primary_text"
-                android:textSize="@dimen/sn_16sp"
-                android:singleLine="true"/>
+                android:textSize="@dimen/sn_14sp"
+                android:maxLines="3"/>
 
-            <TextView
-                android:id="@+id/tvDesc"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="6dp"
-                android:textColor="@color/secondary_text"
-                android:maxLines="2"
-                android:textSize="@dimen/sn_12sp"/>
+
         </LinearLayout>
 
     </LinearLayout>
