--- a/app/src/main/res/layout/item_image.xml
+++ b/app/src/main/res/layout/item_image.xml
@@ -21,7 +21,7 @@
             android:textSize="16dp"
             android:layout_marginBottom="8dp"
             android:padding="4dp"
-            android:singleLine="true"/>
+            android:maxLines="3"/>
 
         <ImageView
             android:id="@+id/ivImage"
